--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="portifolioproject/css/extends.css">
+    <link rel="stylesheet" href="/portifolioproject/css/extends.css">
 </head>
 <body>
     <!-- NAVBAR -->
@@ -206,5 +206,5 @@
 
 </body>
     <!-- incluindo js no html -->
-    <script src="./js/script.js"></script>
+    <script src="/portifolioproject/js/script.js"></script>
 </html>
